--- a/views/room.ejs
+++ b/views/room.ejs
@@ -10,7 +10,8 @@
     <script src="https://unpkg.com/peerjs@1.3.1/dist/peerjs.min.js" defer></script>
     <script src="/socket.io/socket.io.js" defer></script>
     <script src="script.js" defer></script>
-    <title>Document</title>
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">'
+    <title>Voice Chat App</title>
 </head>
 <body>
     <style>
@@ -28,5 +29,8 @@
     }
     </style>
     <div id="video-grid"></div>
+    <div id="chatbox"></div>
+    <input id="msg" type="text">
+    <button id="btn" onclick="newMsgSent()">Send</button>
 </body>
 </html>
