Minor adjustments in an effort to correct the chatbox element, saving in original state and will continue later

--- a/views/room.ejs
+++ b/views/room.ejs
@@ -27,6 +27,10 @@
         height: 100%;
         object-fit: cover;
     }
+
+    #chatbox {
+        border: 10px solid black;
+    }
     </style>
     <div id="video-grid"></div>
     <div id="chatbox"></div>
