--- a/static/style.css
+++ b/static/style.css
@@ -1,11 +1,14 @@
 #video-grid {
     display: grid;
     grid-template-columns: repeat(auto-fill, 300px);
-    grid-auto-rows: 450px;
+    grid-auto-rows: 225px;
 }
 
 video {
     width: 100%;
     height: 100%;
     object-fit: cover;
+}
+body {
+    background: grey;
 }
