--- a/views/room.ejs
+++ b/views/room.ejs
@@ -10,28 +10,10 @@
     <script src="https://unpkg.com/peerjs@1.3.1/dist/peerjs.min.js" defer></script>
     <script src="/socket.io/socket.io.js" defer></script>
     <script src="script.js" defer></script>
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">'
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Voice Chat App</title>
 </head>
 <body>
-    <style>
-    #video-grid {
-        display: grid;
-        grid-template-columns: repeat(auto-fill, 300px);
-        grid-auto-rows: 300px;
-        
-    }
-
-    video {
-        width: 100%;
-        height: 100%;
-        object-fit: cover;
-    }
-
-    #chatbox {
-        border: 10px solid black;
-    }
-    </style>
     <div id="video-grid"></div>
     <div id="chatbox"></div>
     <input id="msg" type="text">
