--- a/static/style.css
+++ b/static/style.css
@@ -7,8 +7,17 @@
 video {
     width: 100%;
     height: 100%;
+    margin: 7px 7px 7px 7px;
     object-fit: cover;
 }
 body {
     background: grey;
+}
+
+.green {
+   color: green;
+}
+
+.red  {
+    color: red;
 }
